--- a/PositionIn/Base.lproj/Main.storyboard
+++ b/PositionIn/Base.lproj/Main.storyboard
@@ -2,7 +2,6 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="j5Z-eJ-Y0Z">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
         <!--Main Menu View Controller-->
@@ -115,91 +114,12 @@
             <point key="canvasLocation" x="1765" y="-738"/>
         </scene>
         <!--Product Details View Controller-->
-        <scene sceneID="wF8-MO-KJS">
+        <scene sceneID="Ofi-KM-od4">
             <objects>
-                <collectionViewController id="aA3-Tv-h6a" customClass="ProductDetailsViewController" customModule="PositionIn" customModuleProvider="target" sceneMemberID="viewController">
-                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="O7m-VF-fQd">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="U2c-uW-rhY">
-                            <size key="itemSize" width="250" height="50"/>
-                            <size key="headerReferenceSize" width="50" height="200"/>
-                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                        </collectionViewFlowLayout>
-                        <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ProductAction" id="RyG-Qj-E3j" customClass="ProductActionCell" customModule="PositionIn" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="250" height="50"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MainMenuCategories" translatesAutoresizingMaskIntoConstraints="NO" id="ig1-xq-oT5">
-                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" secondItem="ig1-xq-oT5" secondAttribute="height" multiplier="1:1" id="U5z-iu-CEb"/>
-                                            </constraints>
-                                        </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v1a-OU-oF0">
-                                            <rect key="frame" x="60" y="14.5" width="180" height="20.5"/>
-                                            <color key="backgroundColor" red="0.63529411759999999" green="0.72549019609999998" blue="0.15686274510000001" alpha="1" colorSpace="calibratedRGB"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                    </subviews>
-                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                </view>
-                                <color key="backgroundColor" red="0.97254901959999995" green="0.83921568629999999" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="bottom" secondItem="ig1-xq-oT5" secondAttribute="bottom" id="4eX-sl-mfn"/>
-                                    <constraint firstAttribute="centerY" secondItem="v1a-OU-oF0" secondAttribute="centerY" id="9mx-YQ-f59"/>
-                                    <constraint firstAttribute="trailing" secondItem="v1a-OU-oF0" secondAttribute="trailing" constant="10" id="MfI-kt-lnc"/>
-                                    <constraint firstItem="v1a-OU-oF0" firstAttribute="leading" secondItem="ig1-xq-oT5" secondAttribute="trailing" constant="10" id="bVP-bf-qpu"/>
-                                    <constraint firstItem="ig1-xq-oT5" firstAttribute="top" secondItem="RyG-Qj-E3j" secondAttribute="top" id="czu-5r-Lhs"/>
-                                    <constraint firstItem="ig1-xq-oT5" firstAttribute="leading" secondItem="RyG-Qj-E3j" secondAttribute="leading" id="kV3-ch-Nb9"/>
-                                </constraints>
-                            </collectionViewCell>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ProductInfo" id="GnL-9P-6u2" customClass="ProductInfoCell" customModule="PositionIn" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="250" height="50"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                </view>
-                                <color key="backgroundColor" red="0.13725490200000001" green="0.4431372549" blue="0.83529411760000005" alpha="1" colorSpace="calibratedRGB"/>
-                            </collectionViewCell>
-                        </cells>
-                        <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ProductDetailsHeader" id="Wam-k7-dll" customClass="ProductDetailsHeaderView" customModule="PositionIn" customModuleProvider="target">
-                            <rect key="frame" x="0.0" y="0.0" width="600" height="50"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <subviews>
-                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MenuLogo" translatesAutoresizingMaskIntoConstraints="NO" id="Oze-xI-zkV">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="200"/>
-                                </imageView>
-                            </subviews>
-                            <constraints>
-                                <constraint firstAttribute="trailing" secondItem="Oze-xI-zkV" secondAttribute="trailing" id="4Cq-RF-hcO"/>
-                                <constraint firstItem="Oze-xI-zkV" firstAttribute="top" secondItem="Wam-k7-dll" secondAttribute="top" id="561-D0-Skv"/>
-                                <constraint firstAttribute="bottom" secondItem="Oze-xI-zkV" secondAttribute="bottom" id="vPb-3C-qNb"/>
-                                <constraint firstItem="Oze-xI-zkV" firstAttribute="leading" secondItem="Wam-k7-dll" secondAttribute="leading" id="zND-wu-YYS"/>
-                            </constraints>
-                            <connections>
-                                <outlet property="backImage" destination="Oze-xI-zkV" id="tpK-82-8VV"/>
-                            </connections>
-                        </collectionReusableView>
-                        <connections>
-                            <outlet property="dataSource" destination="aA3-Tv-h6a" id="g7d-AT-fPp"/>
-                            <outlet property="delegate" destination="aA3-Tv-h6a" id="ZX8-xR-Jc7"/>
-                        </connections>
-                    </collectionView>
-                </collectionViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="jOW-cp-Bch" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="S6u-6D-z8V" customClass="ProductDetailsViewController" customModule="PositionIn" customModuleProvider="target" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kJS-3G-KqG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1763" y="-94"/>
+            <point key="canvasLocation" x="1765" y="-90"/>
         </scene>
         <!--Browse View Controller-->
         <scene sceneID="wfN-Bx-Jle">
@@ -223,7 +143,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="displayModeSegmentedControl" destination="Hzh-Pp-w0S" id="T0S-bj-Beg"/>
-                        <segue destination="aA3-Tv-h6a" kind="show" identifier="ShowProductDetails" id="NYW-Wp-xaV"/>
+                        <segue destination="S6u-6D-z8V" kind="show" identifier="ShowProductDetails" id="UGm-BP-OPQ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="spd-ov-gak" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -234,7 +154,5 @@
     <resources>
         <image name="BrowseModeList" width="22" height="22"/>
         <image name="BrowseModeMap" width="22" height="22"/>
-        <image name="MainMenuCategories" width="24" height="24"/>
-        <image name="MenuLogo" width="173" height="38"/>
     </resources>
 </document>
