--- a/PositionIn/Base.lproj/Main.storyboard
+++ b/PositionIn/Base.lproj/Main.storyboard
@@ -116,10 +116,73 @@
         <!--Product Details View Controller-->
         <scene sceneID="Ofi-KM-od4">
             <objects>
-                <viewController id="S6u-6D-z8V" customClass="ProductDetailsViewController" customModule="PositionIn" customModuleProvider="target" sceneMemberID="viewController"/>
+                <viewController id="S6u-6D-z8V" customClass="ProductDetailsViewController" customModule="PositionIn" customModuleProvider="target" sceneMemberID="viewController">
+                    <connections>
+                        <segue destination="zuz-oy-p8C" kind="show" identifier="ShowBuyScreen" id="njH-RT-PIH"/>
+                        <segue destination="Mdd-tM-hBG" kind="show" identifier="ShowProductInventory" id="Dbq-97-777"/>
+                        <segue destination="8dF-Ru-GXn" kind="show" identifier="ShowSellerProfile" id="JvA-g0-pPd"/>
+                    </connections>
+                </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kJS-3G-KqG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1765" y="-90"/>
+        </scene>
+        <!--Order-->
+        <scene sceneID="MUQ-Gt-xbY">
+            <objects>
+                <viewController id="zuz-oy-p8C" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="WbG-Aa-i39"/>
+                        <viewControllerLayoutGuide type="bottom" id="dwb-S7-90d"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="N57-2U-7cx">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Order" id="GRt-hh-ffs"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ssV-8H-Vna" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2450" y="-382"/>
+        </scene>
+        <!--Product Inventory-->
+        <scene sceneID="Kkc-3q-c1D">
+            <objects>
+                <viewController id="Mdd-tM-hBG" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="BtS-9E-h7m"/>
+                        <viewControllerLayoutGuide type="bottom" id="Q6a-YL-E4h"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Qjp-hS-nBz">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Product Inventory" id="6kF-su-IMH"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Se8-GM-xNb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2447" y="265"/>
+        </scene>
+        <!--Seller Profile-->
+        <scene sceneID="Clr-D8-66g">
+            <objects>
+                <viewController id="8dF-Ru-GXn" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="wPL-dg-VLU"/>
+                        <viewControllerLayoutGuide type="bottom" id="urf-aI-iDh"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Et0-Ae-eDr">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Seller Profile" id="UmJ-LO-Lby"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="feL-Ea-Em3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1787" y="795"/>
         </scene>
         <!--Browse View Controller-->
         <scene sceneID="wfN-Bx-Jle">
