--- a/PositionIn/Base.lproj/Main.storyboard
+++ b/PositionIn/Base.lproj/Main.storyboard
@@ -117,7 +117,7 @@
         <scene sceneID="JzA-qa-Ju1">
             <objects>
                 <tableViewController id="9PQ-zJ-hEA" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="wKe-Ah-frR">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="wKe-Ah-frR">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -419,35 +419,20 @@
         <!--Product Inventory-->
         <scene sceneID="Kkc-3q-c1D">
             <objects>
-                <viewController id="Mdd-tM-hBG" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="BtS-9E-h7m"/>
-                        <viewControllerLayoutGuide type="bottom" id="Q6a-YL-E4h"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="Qjp-hS-nBz">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
+                <viewController id="Mdd-tM-hBG" customClass="ProductInventoryViewController" customModule="PositionIn" customModuleProvider="target" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" title="Product Inventory" id="6kF-su-IMH"/>
+                    <connections>
+                        <segue destination="S6u-6D-z8V" kind="show" identifier="ShowProductDetails" id="WXU-OU-n2l"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Se8-GM-xNb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2447" y="265"/>
+            <point key="canvasLocation" x="2511" y="285"/>
         </scene>
         <!--Seller Profile-->
         <scene sceneID="Clr-D8-66g">
             <objects>
-                <viewController id="8dF-Ru-GXn" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="wPL-dg-VLU"/>
-                        <viewControllerLayoutGuide type="bottom" id="urf-aI-iDh"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="Et0-Ae-eDr">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
+                <viewController id="8dF-Ru-GXn" customClass="SellerProfileViewController" customModule="PositionIn" customModuleProvider="target" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" title="Seller Profile" id="UmJ-LO-Lby"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="feL-Ea-Em3" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -490,4 +475,7 @@
         <image name="MainMenuCategories" width="24" height="24"/>
         <image name="MainMenuFilters" width="22" height="22"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="WXU-OU-n2l"/>
+    </inferredMetricsTieBreakers>
 </document>
